--- a/KifuSF/Base.lproj/LaunchScreen.storyboard
+++ b/KifuSF/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,13 +18,38 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" insetsLayoutMarginsFromSafeArea="NO" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="OIJ-Jg-ref">
+                                <rect key="frame" x="50" y="278" width="275" height="110"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="OIJ-Jg-ref" secondAttribute="height" multiplier="152:61" id="XSi-2s-JWG"/>
+                                </constraints>
+                            </imageView>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" image="Stripe" translatesAutoresizingMaskIntoConstraints="NO" id="k3H-0d-pah">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.59999999999999998" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="k3H-0d-pah" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="F5S-zW-m3C"/>
+                            <constraint firstItem="OIJ-Jg-ref" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Fml-jR-6CQ"/>
+                            <constraint firstItem="k3H-0d-pah" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Fqt-Hp-ghF"/>
+                            <constraint firstItem="k3H-0d-pah" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="a4g-YV-elF"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="OIJ-Jg-ref" secondAttribute="trailing" constant="50" id="b0q-Fn-yzk"/>
+                            <constraint firstItem="OIJ-Jg-ref" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="fPr-HD-2QU"/>
+                            <constraint firstItem="k3H-0d-pah" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="mic-kp-aI2"/>
+                            <constraint firstItem="OIJ-Jg-ref" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="rUB-VO-NaE"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Logo" width="1121" height="452"/>
+        <image name="Stripe" width="2500" height="2500"/>
+    </resources>
 </document>
